--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -17,7 +17,7 @@
     margin-top: 1em;
   }
 
-  @media screen and (min-width: $sidebar-screen-min-width) {
+  @include breakpoint($large) {
     height: 100vh;
     overflow-y: auto;               // Add scrollbar if the sidebar is too long
     position: fixed;
@@ -98,6 +98,8 @@
     border-radius: 50%;
 
     @include breakpoint($large) {
+      width: 150px;
+      height: 150px;
       padding: 5px;
       border: 1px solid var(--global-border-color);
     }
